test/invalid/num.js
function f(x) { var y = 0; y = x[0]; return false; }
var j = ['b'];
f(j);
j;
